--- a/scotty-short.cabal
+++ b/scotty-short.cabal
@@ -31,6 +31,7 @@ executable scotty-short
        aeson,
        transformers,
        wai,
-       base64-bytestring
+       base64-bytestring,
+       resource-pool
   -- hs-source-dirs:      
   default-language:    Haskell2010
