--- a/scotty-short.cabal
+++ b/scotty-short.cabal
@@ -32,6 +32,7 @@ executable scotty-short
        transformers,
        wai,
        base64-bytestring,
-       resource-pool
+       resource-pool,
+       wai-cors
   -- hs-source-dirs:      
   default-language:    Haskell2010
