--- a/scotty-short.cabal
+++ b/scotty-short.cabal
@@ -16,8 +16,14 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 executable scotty-short
-  main-is:             Main.hs
-  -- other-modules:       
+  hs-source-dirs:       src
+  main-is:             Shortner.hs
+  other-modules:
+    Shortner.AuthManagement
+    Shortner.Database
+    Shortner.HtmlPages
+    Shortner.Types
+
   -- other-extensions:    
   build-depends:
        base >=4.6 && <4.8,
@@ -33,6 +39,7 @@ executable scotty-short
        wai,
        base64-bytestring,
        resource-pool,
-       wai-cors
+       wai-cors,
+       blaze-html
   -- hs-source-dirs:      
   default-language:    Haskell2010
