--- a/scotty-short.cabal
+++ b/scotty-short.cabal
@@ -32,7 +32,7 @@ executable scotty-short
        bytestring,
        text,
        http-types,
-       postgresql-simple,
+       postgresql-simple > 0.4,
        uuid,
        aeson,
        transformers,
